# xfce4-lmon-plugin

./: .gitignore  LICENSE.md  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
data/: lmon.css  lmon.desktop  lmon.ui
include/: lmon.h  lmon_resource.h
src/: lmon.c  load.c
